# docs/swagger.yaml
@@ -26,12 +26,39 @@ definitions:
       error: {}
       message:
         type: string
-      requestId:
+      request_id:
         type: string
       status:
         type: boolean
-      statusCode:
+      status_code:
         type: integer
+    type: object
+  response.Token:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+  response.UserInfo:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  response.UserRegisterResponse:
+    properties:
+      token:
+        $ref: '#/definitions/response.Token'
+      user:
+        $ref: '#/definitions/response.UserInfo'
     type: object
 info:
   contact:
@@ -113,7 +140,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.BaseResponse'
+            $ref: '#/definitions/response.UserRegisterResponse'
         "400":
           description: Bad Request
           schema:
